--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,7 @@
 [build]
-  functions = "functions"
-  publish = "dist"
+  functions = "functions" # Le répertoire contenant vos fonctions serverless
+
+[[redirects]]
+  from = "/api/*" # Un chemin d'accès qui déclenchera la fonction
+  to = "/.netlify/functions/myFunction" # Le chemin de la fonction serverless
+  status = 200
